--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,58 @@
 body {
-  background-color: aquamarine;
+  background: url('./images/eveSkills-background.jpg') no-repeat;
+  background-size: cover;
+  font-family: Roboto;
+  font-size: 16px;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  box-shadow:0 0 0 50vh rgba(0, 0, 0, .6) inset;
+  color: #fff;
+  button {
+    border: none;
+    &:active, &:focus {
+      border: none;
+      background-color: #eee;
+      outline: none;
+    }
+  }
+  .container-back {
+    min-height: 100vh;
+    padding: 0 25px;
+    background-color: rgba($color: #000000, $alpha: .8);
+    header {
+      width: 100%;
+      height: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      h1 {
+        font-family: Staatliches;
+        margin: 0px 0px;
+      }
+      p {
+        display: inline-block;
+        font-weight: 500;
+      }
+      a, button {
+        color: #fff;
+        text-decoration: none;
+        text-transform: uppercase;
+        margin-left: 50px;
+        &:active {
+          color: #aaa;
+        }
+      }
+      button {
+        background: transparent;
+      }
+    }
+    main {
+      width: 100%;
+      .personalBlock {
+        width: 100%;
+        height: 400px;
+      }
+    }
+  }
 }
